# pds19-proyecto-final

./: README.md
imdb/: config.py  database.ini  imdb.py  imdb.py~  imdb.sh  pyproject.toml
imdb/config/: settings.toml  settings.toml~
imdb/data/: conteo_type.txt  data_imdb.txt  download_data.sh
imdb/sql/: create_clean_tables.sql  create_indexes_cleaned.sql  create_indexes_cleaned2.sql  create_indexes_cleaned3.sql  create_raw_tables.sql  create_schemas.sql  to_clean.sql  to_cleaned.sql  to_cleaned2.sql  to_semantic.sql
imdb/tests/: test_imdb.py
