[tool.poetry]
name = "imdb"
version = "0.1.0"
description = ""
authors = ["omireyes19"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = {version = "^1.17", extras = ["all"]}
click = "^7.0"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-docstrings = "^1.5"
xdoctest = "^0.10.3"
pydocstyle = "^4.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = {version = "^4.3", extras = ["pyproject"]}
mypy = "^0.750.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
