[tool.poetry]
name = "imdb"
version = "0.1.0"
description = ""

authors = ["rluiseugenio <lugerojon@gmail.com>", "omireyes19"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
dynaconf = "^2.2"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
imdb = "imdb:imdb"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
